gap on the left at footer fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700|Raleway:100,200,300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700|Raleway:100,200,300,400,500,600,700|Gugi:400|Allerta+Stencil:100, 200, 300, 400, 500, 600, 700');
  body, html {
      height: 100%;
-     width: 100%;
      margin: 0;
      padding: 0;
      font-family: "Montserrat", sans-serif;
@@ -9,14 +8,14 @@
 
  .page-title {
      text-align: center;
-     letter-spacing: 1.2px;
+     letter-spacing: 1.6px;
      font-weight: 700;
      margin-top: 70px;
-     font-family: "Raleway", sans-serif;
+     font-family: "Allerta Stencil", cursive;
 }
  .navbar {
      background-color: #06212c;
-     padding-right: 30px;
+    
 }
  .brand-phone {
      color: #fafafa;
@@ -90,6 +89,33 @@
 .carousel-caption h6 {
     background: #40585c9d;
 }
+
+.gap {
+
+    padding: 0 !important;
+}
+
+.testimonials {
+    padding: 30px;
+    margin: 0;
+
+}
+
+.client {
+    margin-top: 20px;
+}
+
+.client img {
+    float: left;
+    margin-right: 20px;
+    border-radius: 50%;
+  }
+
+  hr {
+    border: 0;
+    height: 2px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
 /*contact page------------------------------------------------*/
  form {
      margin-top: 30px;
@@ -155,16 +181,12 @@
 /*---------Footer----------------------------------------------------*/
  footer {
      position: scroll;
-     left: 0;
-     bottom: 0;
      width: 100%;
      background-color:#06212c;
      color: white;
      text-align: center;
      padding-top: 20px;
      padding-bottom: 10px;
-     padding-right: 10px;
-     padding-left: 10px;
      margin-top: 30px;
      
 }
@@ -338,7 +360,7 @@ footer .copyright {
         line-height: calc(1.3em + (1.3 - 1.2) * ((100vw - 300px)/(1600 - 300)));
    }
     form h6, label, .contact-place, .submit-button {
-         font-size: calc(14px + (30 - 14) * ((100vw - 300px) / (1600 - 300)));
+         font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
          line-height: calc(1.3em + (1.3 - 1.2) * ((100vw - 300px)/(1600 - 300)));
     }
    
